--- a/game/workinprogress.html
+++ b/game/workinprogress.html
@@ -8,6 +8,9 @@
 <script src="js/jquery-1.11.3.min.js"> </script>
 <script src="js/xavier.js"> </script>
 
+ <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
+<link rel="stylesheet" type="text/css" href="css/firebase.css">
+
 </head>
 
 <body>
@@ -32,6 +35,7 @@
 
 	<div class="row">
 
+      <!--  This is  a hidden comment-->
 	  <div class="col-lg-6">
 
 	  	<h4>Xavier Math Games</h4>
@@ -53,7 +57,24 @@
 
 
 	  <div class="col-lg-6">
-	  RIGHT HAND SIDE
+	  
+    <!-- CHAT MARKUP -->
+      <div class="example-chat l-demo-container">
+        <header>Xavier Chat</header>
+
+        <div class='example-chat-toolbar'>
+          <label for="nameInput">Username:</label>
+          <input type='text' id='nameInput' placeholder='enter a username...'>
+        </div>
+
+        <ul id='example-messages' class="example-chat-messages"></ul>
+
+        <footer>
+          <input type='text' id='messageInput'  placeholder='Type a message...'>
+        </footer>
+      </div>
+
+    
 
 	  </div>
 	</div><!-- /.row -->
