--- a/game/workinprogress.html
+++ b/game/workinprogress.html
@@ -24,7 +24,7 @@
    
   	<a class="navbar-brand" href="game.html">Xavier Game</a>	
 
-    <p class="navbar-text navbar-right pull-right">Signed in as <a href="#" class="navbar-link">Xavier Brasher</a></p>
+    <p class="navbar-text navbar-right pull-right">Signed in as <span id="username"> </span> &nbsp&nbsp&nbsp&nbsp</p>
   </div>
 
 </nav>
@@ -41,16 +41,16 @@
 	  	<h4>Xavier Math Games</h4>
 	  	<br/>
 		<ol>
-  			<li>5 x 8 = <input type="text" placeholder="answers here" id ="question1"> <button class="btn btn-warning" id="correct1">Submit</button></li> 
+  			<li>5 x 8 = <input type="text" placeholder="answers here" id ="question1"> <button class="btn btn-primary" id="correct1">Submit</button></li> 
 
   			<br/>
-  			<li>34 - 3 = <input type="text" placeholder="answers here" id ="question2"> <button class="btn btn-warning" id="correct2">Submit</button></li> 
+  			<li>34 - 3 = <input type="text" placeholder="answers here" id ="question2"> <button class="btn btn-primary" id="correct2">Submit</button></li> 
   			<br/>
-  			<li>3 x 4 = <input type="text" placeholder="answers here" id ="question3"> <button class="btn btn-warning" id="correct3">Submit</button></li> 
+  			<li>3 x 4 = <input type="text" placeholder="answers here" id ="question3"> <button class="btn btn-primary" id="correct3">Submit</button></li> 
   			<br/>
-  			<li>5 x 6 = <input type="text" placeholder="answers here" id ="question4"> <button class="btn btn-warning" id="correct4">Submit</button></li> 
+  			<li>5 x 6 = <input type="text" placeholder="answers here" id ="question4"> <button class="btn btn-primary" id="correct4">Submit</button></li> 
   			<br/>
-  			<li>23 - 9 = <input type="text" placeholder="answers here" id ="question5"> <button class="btn btn-warning" id="correct5">Submit</button></li> 
+  			<li>23 - 9 = <input type="text" placeholder="answers here" id ="question5"> <button class="btn btn-primary" id="correct5">Submit</button></li> 
 		</ol>
 		
 	  </div><!-- /.col-lg-6 -->
@@ -64,7 +64,7 @@
 
         <div class='example-chat-toolbar'>
           <label for="nameInput">Username:</label>
-          <input type='text' id='nameInput' placeholder='enter a username...'>
+          <input type='text' id='nameInput' placeholder='' disabled>
         </div>
 
         <ul id='example-messages' class="example-chat-messages"></ul>
